# la-nlp

./: .gitignore  .python-version  LICENSE  README.md  pyproject.toml  requirements.txt  todo.txt
docs/: changelog.md  docs.md  pipes.md
la_nlp/: aspect_sentiment_pipe.py  components.py  config.py  utils.py
la_nlp/pipes/: aspect_sentiment.py
tests/: test_aspect_sentiment.py  test_components.py  test_utils.py
tests/test_data/: test_aspects_1.toml  test_aspects_2.toml
