[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "la_nlp"
version = "0.4.1"
authors = [
    { name="William Strausser", email="william.strausser@ubc.ca" },
]
description = "NLP tools for working with UBC Arts Learning Analytics data."
requires-python = ">=3.11.0"
dependencies = [
    'spacy >= 3.4.2',
    'vaderSentiment >= 3.3.2',
]
classifiers = [
   "Programming Language :: Python :: 3",
   "Operating System :: OS Independent",
]

[tool.setuptools.packages]
find = {}

[tool.setuptools.package-data]
"la_nlp.data" = ["*.toml"]
